# sptk5

./: .gitignore  CMakeLists.txt  Makefile  PCRE.aip  README  README.oracle  README.wepoll  Simply Powerful Toolkit.aip  adjust_google_test.sh  build-debian-package.sh  cmake_install.cmake  compile_commands.json  coverity-build.sh  distclean.sh  generate_docs.sh  install_themes.sh  sptk5.doxygen  sptk5.doxygen.in  sptk5.kdev4
.themes.sptk/: CMakeLists.txt  Makefile.am
.themes.sptk/Dark/: theme.ini
.themes.sptk/Default/: CMakeLists.txt
.themes.sptk/Keramic/: theme.ini
.themes.sptk/OSX_Flat/: theme.ini
.themes.sptk/Opera/: CMakeLists.txt
code/: .clang-format  CMakeLists.txt  adjust_google_test.sh  deploy_to_theater.sh  distclean.sh  dos2unix_all.sh  exclude_from_tarball.lst  helgrind.sh  install_local_deb_packages.sh  install_local_packages.sh  set_pragma_once_on_headers.py  sonar-build.sh  sonar-project.properties  uninstall_local_deb_packages.sh
code/SMQ/: CMakeLists.txt  Makefile  cmake_install.cmake
code/cmake/: CXX14.cmake  CXX17.cmake  CXX20.cmake  FindBrotli.cmake  FindEPoll.cmake  FindFLTK13.cmake  FindMySQL.cmake  FindOCI.cmake  FindOpenSSL-Win64.cmake  FindOpenSSLWin64.cmake  FindOracle.cmake  FindPCRE.cmake  FindPCRE2.cmake  FindPostgreSQL.cmake  FindZeroMQ.cmake  OSType.cmake
code/debian/: changelog  copyright  rules
code/doxygen/: sptk5-header.html
code/events.w32/: CMakeLists.txt
code/examples/: CMakeLists.txt
code/googletest/: CMakeLists.txt  CMakeLists.txt.orig  googletest-distribution.cbp  gtest.cbp
code/ocitest/: CMakeLists.txt  ocitest.cpp
code/sptk5/: ArchiveFile.h  Base64.h  Brotli.h  Buffer.h  BufferStorage.h  CMakeLists.txt  CSmallPixmapIDs.h  CaseInsensitiveCompare.h  CommandLine.h  Crypt.h  DataSource.h  DateTime.h  DebugMacros.h  DirectoryDS.h  Exception.h  Field.h  FieldList.h  FileLogEngine.h  HomeDirectory.h  IntList.h  JWT.h  LogEngine.h  LogPriority.h  Logger.h  Loop.h  MemoryDS.h  MoneyData.h  OsProcess.h  PackedStrings.h  Printer.h  ReadBuffer.h  Registry.h  RegularExpression.h  SharedStrings.h  StopWatch.h  StreamLogEngine.h  String.h  Strings.h  SysLogEngine.h  SystemException.h  (+21 more)
code/sqlite3/: CMakeLists.txt  README.txt
code/src/: CMakeLists.txt  set_header.pl  ssl_test.cpp  ssl_test.cpp.orig
code/test/: CMakeLists.txt  TcpSslServerTests.cpp  TestData.cpp  TestData.h  TestRunner.cpp  TestSettings.cpp  TestSettings.h  settings.txt  sptk_unit_tests.cpp  sptk_unit_tests.h  unit_tests.cpp
code/themes/: CMakeLists.txt  tar2h.cpp  tar_theme.sh
code/utilities/: CMakeLists.txt  wsdl2cxx.cpp  xml2json.cpp
events.w32/: CMakeLists.txt  event_provider.h  event_provider.mc  event_provider.rc  events.h  events.mc
examples/: CMakeLists.txt  Makefile  README.txt  calendar_test.cpp  check_buttons.cpp  client_test.cpp  cmake_install.cmake  combo_test.cpp  cscroll_test.cpp  datetime.cpp  db_list_view.cpp  exceptions.cpp  logfile_test.cpp  registry.cpp  server_test.cpp  shaped_window.cpp  spell_checker.cpp  syslog_test.cpp  tabs_test.cpp  thread_onexit.cpp  thread_rwlock.cpp  thread_test.cpp  tree_test.cpp  unit_tests.cpp
examples/core/: CMakeLists.txt  logfile_test.cpp  regexp.cpp  registry.cpp  string2md5.cpp  syslog_test.cpp  timer.cpp  unique_instance.cpp  zlib_test.cpp
examples/database/: CMakeLists.txt  Makefile  all_drivers_test.cpp  bulk_insert_test.cpp  cmake_install.cmake  driver_load_test.cpp  odbc_test.cpp  odbc_test2.cpp  odbc_test3.cpp  postgresql_bulk_insert_test.cpp  postgresql_test.cpp  postgresql_test2.cpp  sqlite3_test.cpp
examples/datasources/: CMakeLists.txt  Makefile  cmake_install.cmake  directory_ds.cpp  imap_ds.cpp
examples/dialogs/: CMakeLists.txt  Makefile  cmake_install.cmake  file_dialogs.cpp
examples/gui/: CMakeLists.txt  calendar_test.cpp  ceditor_test.cpp  cgroup_test.cpp  check_buttons.cpp  combo_test.cpp  cscroll_test.cpp  db_list_view.cpp  dialog_test.cpp  excel_test.cpp  file_dialogs.cpp  font_combo.cpp  list_view.cpp  radio_buttons.cpp  shaped_window.cpp  spell_checker.cpp  splitter.cpp  sptk_test.cpp  tabs_test.cpp  themes_test.cpp  tree_test.cpp  tree_view.cpp
examples/json/: CMakeLists.txt  json_test1.cpp  json_test2.cpp  json_test3.cpp
examples/jwt/: CMakeLists.txt  jwt_test.cpp
examples/net/: CMakeLists.txt  Makefile  client_test.cpp  cmake_install.cmake  http_connect.cpp  imap_connect.cpp  server_test.cpp  smtp_connect.cpp  ssl_client_test.cpp  ssl_server_test.cpp  tcp_client_test.cpp  tcp_server_test.cpp  udp_client_test.cpp  udp_server_test.cpp  ws_server_test.cpp
examples/threads/: CMakeLists.txt  semaphore.cpp  thread_onexit.cpp  thread_pool_test.cpp  thread_rwlock.cpp  thread_test.cpp  threadman_test.cpp
examples/utils/: CMakeLists.txt  command_line.cpp  datetime.cpp  encrypt_decrypt.cpp  exceptions.cpp  logfile_test.cpp  regexp.cpp  registry.cpp  string2md5.cpp  syslog_test.cpp  unique_instance.cpp
examples/xml/: CMakeLists.txt  Makefile  cmake_install.cmake  xml_test1.cpp  xml_test2.cpp  xml_test3.cpp  xml_utf8_test.cpp  xpath_test1.xml  xpath_test2.xml  xpath_test3.xml  xpath_test4.xml  xpath_test5.xml  xpath_test6.xml
src/: CMakeLists.txt  Makefile  cmake_install.cmake
src/db/: CDBDriver.cpp  CDBDriverLoader.cpp  CDatabase.cpp  CDatabaseDriver.cpp  CDatabaseField.cpp  CParams.cpp  CQuery.cpp  CTransaction.cpp
src/drivers/: CMakeLists.txt
src/gui/: CButtonGroup.cpp  CCalendar.cpp  CCheckButtons.cpp  CColumn.cpp  CComboBox.cpp  CControl.cpp  CControlList.cpp  CDBListView.cpp  CDateIntervalInput.cpp  CDateTimeInput.cpp  CDialog.cpp  CDirOpenDialog.cpp  CEditor.cpp  CFileDialog.cpp  CFileSaveDialog.cpp  CFont.cpp  CFontComboBox.cpp  CGroup.cpp  CHtmlBox.cpp  CIntegerInput.cpp  CLayoutClient.cpp  CLayoutManager.cpp  CListView.cpp  CListViewRows.cpp  CMemoInput.cpp  CMessageDialog.cpp  CPackedStrings.cpp  CPasswordInput.cpp  CPhoneNumberInput.cpp  CPngImage.cpp  CPopupWindow.cpp  CScroll.cpp  CScrollBar.cpp  CSplitter.cpp  CTreeControl.cpp  CWindow.cpp
src/jwt/: CMakeLists.txt  JWT.cpp  base64.cpp  jwt-gnutls.cpp  jwt-openssl.cpp  jwt-private.h  jwt.cpp
(+1716 files in other folders)
