ADD_EXECUTABLE (tar2h tar2h.cpp)
TARGET_LINK_LIBRARIES (tar2h sputil5)

FOREACH (THEME IN ITEMS Blue Dark Default E17 Flat Keramic OSX OSX_Flat Opera)

IF (NOT WIN32)

  SET(THEME_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/${THEME})

  FILE(GLOB THEME_FILE_PATHS ${THEME_DIRECTORY}/*.png ${THEME_DIRECTORY}/theme.ini ${THEME_DIRECTORY}/dialog_icons/*.png ${THEME_DIRECTORY}/icons.12/*.png ${THEME_DIRECTORY}/icons.16/*.png ${THEME_DIRECTORY}/icons.22/*.png)
  SET(THEME_FILES *.png theme.ini dialog_icons/*.png icons.12/*.png icons.16/*.png icons.22/*.png)

  ADD_CUSTOM_COMMAND(
    OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/${THEME}.tar
    DEPENDS ${THEME_FILES_PATHS}
    COMMAND ${CMAKE_CURRENT_SOURCE_DIR}/tar_theme.sh ${CMAKE_CURRENT_BINARY_DIR}/${THEME} ${THEME_DIRECTORY} ${THEME_FILES}
  )

  ADD_CUSTOM_TARGET(
    "${THEME}_Theme" ALL
    DEPENDS ${THEME}.tar
  )

ENDIF ()

INSTALL(
  FILES ${CMAKE_CURRENT_BINARY_DIR}/${THEME}.tar
  DESTINATION ${CMAKE_INSTALL_PREFIX}/share/sptk5 COMPONENT gui
)

ENDFOREACH()
